[fix] css align element

--- a/snapface/src/app/landing-page/landing-page.component.scss
+++ b/snapface/src/app/landing-page/landing-page.component.scss
@@ -4,7 +4,7 @@
     padding: 20px;
     border-radius: 10px;
     margin: 40px auto;
-    text-align: center 20px auto;
+    text-align: center;
     img {
         width: 520px;
         height: auto;
